--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,8 +6,6 @@
 		url('../fonts/nickainley/Nickainley-Normal.otf') format("opentype"),
 }
 
-
-
 /* Base Styles
 ********************************************************************* */
 html {
@@ -24,184 +22,7 @@ body {
 	font-family: 'Montserrat', sans-serif;
 }
 
-/* Grid
-********************************************************************* */
-.container {
-	position: relative;
-	width: 100%;
-	max-width: 960px;
-	margin: 0 auto;
-	padding: 0 20px;
-	box-sizing: border-box;
-}
-
-.column,
-.columns {
-	width: 100%;
-	float: left;
-	box-sizing: border-box;
-}
-
-/* For devices larger than 400px */
-@media (min-width: 400px) {
-	.container {
-		width: 85%;
-		padding: 0;
-	}
-}
-
-/* For devices larger than 550px */
-@media (min-width: 550px) {
-	.container {
-		width: 80%;
-	}
-
-	.column,
-	.columns {
-		margin-left: 4%;
-	}
-
-	.column:first-child,
-	.columns:first-child {
-		margin-left: 0;
-	}
-
-	.one.column,
-	.one.columns {
-		width: 4.66666666667%;
-	}
-
-	.two.columns {
-		width: 13.3333333333%;
-	}
-
-	.three.columns {
-		width: 22%;
-	}
-
-	.four.columns {
-		width: 30.6666666667%;
-	}
-
-	.five.columns {
-		width: 39.3333333333%;
-	}
-
-	.six.columns {
-		width: 48%;
-	}
-
-	.seven.columns {
-		width: 56.6666666667%;
-	}
-
-	.eight.columns {
-		width: 65.3333333333%;
-	}
-
-	.nine.columns {
-		width: 74.0%;
-	}
-
-	.ten.columns {
-		width: 82.6666666667%;
-	}
-
-	.eleven.columns {
-		width: 91.3333333333%;
-	}
-
-	.twelve.columns {
-		width: 100%;
-		margin-left: 0;
-	}
-
-	.one-third.column {
-		width: 30.6666666667%;
-	}
-
-	.two-thirds.column {
-		width: 65.3333333333%;
-	}
-
-	.one-half.column {
-		width: 48%;
-	}
-
-	/* Offsets */
-	.offset-by-one.column,
-	.offset-by-one.columns {
-		margin-left: 8.66666666667%;
-	}
-
-	.offset-by-two.column,
-	.offset-by-two.columns {
-		margin-left: 17.3333333333%;
-	}
-
-	.offset-by-three.column,
-	.offset-by-three.columns {
-		margin-left: 26%;
-	}
-
-	.offset-by-four.column,
-	.offset-by-four.columns {
-		margin-left: 34.6666666667%;
-	}
-
-	.offset-by-five.column,
-	.offset-by-five.columns {
-		margin-left: 43.3333333333%;
-	}
-
-	.offset-by-six.column,
-	.offset-by-six.columns {
-		margin-left: 52%;
-	}
-
-	.offset-by-seven.column,
-	.offset-by-seven.columns {
-		margin-left: 60.6666666667%;
-	}
-
-	.offset-by-eight.column,
-	.offset-by-eight.columns {
-		margin-left: 69.3333333333%;
-	}
-
-	.offset-by-nine.column,
-	.offset-by-nine.columns {
-		margin-left: 78.0%;
-	}
-
-	.offset-by-ten.column,
-	.offset-by-ten.columns {
-		margin-left: 86.6666666667%;
-	}
-
-	.offset-by-eleven.column,
-	.offset-by-eleven.columns {
-		margin-left: 95.3333333333%;
-	}
-
-	.offset-by-one-third.column,
-	.offset-by-one-third.columns {
-		margin-left: 34.6666666667%;
-	}
-
-	.offset-by-two-thirds.column,
-	.offset-by-two-thirds.columns {
-		margin-left: 69.3333333333%;
-	}
-
-	.offset-by-one-half.column,
-	.offset-by-one-half.columns {
-		margin-left: 52%;
-	}
-}
-
-/* Typography
-********************************************************************* */
+/* Tipografía */
 h1,
 h2,
 h3,
@@ -214,6 +35,7 @@ h6 {
 }
 
 h1 {
+	font-family: 'Nickandley', sans-serif;
 	font-size: 4.0rem;
 	line-height: 1.2;
 	letter-spacing: -.1rem;
@@ -249,11 +71,10 @@ h6 {
 	letter-spacing: 0;
 }
 
-/* Larger than phablet */
+/* Para pantallas tablet y desktop */
 @media (min-width: 550px) {
 	h1 {
-		font-family: 'Nickandley', sans-serif;
-		font-size: 5.0rem;
+		font-size: 5.5rem;
 	}
 
 	h2 {
@@ -281,19 +102,16 @@ p {
 	margin-top: 0;
 }
 
-/* Links
-********************************************************************* */
+/* Links */
 a {
-	color: #1EAEDB;
+	color: #9880ef;
 }
 
 a:hover {
-	color: #0FA0CE;
+	color: #5c3dd3;
 }
 
-/* Header Section
-********************************************************************* */
-
+/* Header */
 
 header {
 	display: -webkit-box;
@@ -324,7 +142,6 @@ header {
 	-ms-flex-item-align: center;
 	align-self: center;
 	padding: 2rem;
-	max-width: 960px;
 	text-align: center;
 }
 
@@ -369,122 +186,6 @@ header {
 	}
 }
 
-.title .icon {
-	color: #FFFFFF;
-	font-size: 50px;
-}
-
-.main_nav {
-	position: fixed;
-	top: 0px;
-	max-height: 50px;
-	z-index: 999;
-	width: 100%;
-	padding-top: 17px;
-	background: none;
-	overflow: hidden;
-	-webkit-transition: all 0.3s;
-	transition: all 0.3s;
-	opacity: 0;
-	top: -100px;
-	padding-bottom: 6px;
-}
-
-@media only screen and (max-width: 766px) {
-	.main_nav {
-		padding-top: 25px;
-	}
-}
-
-.open-nav {
-	max-height: 400px !important;
-}
-
-.sticky {
-	background-color: #ffffff;
-	opacity: 1;
-	top: 0px;
-}
-
-nav {
-	width: 100%;
-	margin-top: 5px;
-}
-
-@media only screen and (max-width: 766px) {
-	nav {
-		width: 100%;
-	}
-}
-
-nav ul {
-	list-style: none;
-	overflow: hidden;
-	text-align: center;
-}
-
-@media only screen and (max-width: 766px) {
-	nav ul {
-		padding-top: 0px;
-		margin-bottom: 22px;
-		text-align: center;
-		width: 100%;
-	}
-}
-
-nav ul li {
-	display: inline-block;
-	margin-left: 35px;
-	line-height: 1.5;
-	letter-spacing: 1px;
-}
-
-@media only screen and (max-width: 766px) {
-	nav ul li {
-		width: 100%;
-		padding: 7px 0;
-		margin: 0;
-	}
-
-	nav ul li:first-child {
-		margin-top: 70px;
-	}
-}
-
-nav ul a {
-	text-transform: uppercase;
-	font-size: 12px;
-	text-decoration: none;
-}
-
-nav ul a:hover {
-	color: #CFCFCF;
-}
-
-.mobile-toggle {
-	display: none;
-	cursor: pointer;
-	font-size: 20px;
-	position: absolute;
-	right: 22px;
-	top: 0;
-	width: 30px;
-}
-
-@media only screen and (max-width: 766px) {
-	.mobile-toggle {
-		display: block;
-	}
-}
-
-.mobile-toggle span {
-	width: 30px;
-	height: 4px;
-	margin-bottom: 6px;
-	background: #000000;
-	display: block;
-}
-
 .scroll-down {
 	position: absolute;
 	left: 50%;
@@ -508,8 +209,15 @@ nav ul a:hover {
 	animation: fade_move_down 2s ease-in-out infinite;
 }
 
+@media only screen and (min-width: 766px) {
+	.scroll-down {
+		bottom: 6vh;
+		width: 20px;
+		height: 20px;
+	}
+}
 
-/*animated scroll arrow animation*/
+/* Arrow scroll Animation */
 @-webkit-keyframes fade_move_down {
 	0% {
 		-webkit-transform: translate(0, -10px) rotate(45deg);
@@ -558,8 +266,7 @@ nav ul a:hover {
 	}
 }
 
-/* About Section
-********************************************************************* */
+/* About Me */
 
 #about {
 	padding: 100px 0 50px 0;
@@ -871,12 +578,12 @@ form {
 }
 
 .block {
-	width: 70px;
-	height: 2px;
-	background: #e55d87;
+	width: 100px;
+	height: 2.5px;
+	background: #9880ef;
 	/* Old browsers */
-	background: -moz-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
-	background: -webkit-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
-	background: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%);
+	background: -moz-linear-gradient(-45deg, #5c3dd3 0%, #e5a7f5 100%);
+	background: -webkit-linear-gradient(-45deg, #5c3dd3 0%, #e5a7f5 100%);
+	background: linear-gradient(135deg, #5c3dd3 0%, #e5a7f5 100%);
 	margin-bottom: 50px;
 }
