--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,8 +6,7 @@
 		url('../fonts/nickainley/Nickainley-Normal.otf') format("opentype"),
 }
 
-/* Base Styles
-********************************************************************* */
+/* Base Styles */
 html {
 	margin: 0;
 	padding: 0;
@@ -22,7 +21,7 @@ body {
 	font-family: 'Montserrat', sans-serif;
 }
 
-/* Tipografía */
+/* Font Sizes */
 h1,
 h2,
 h3,
@@ -71,7 +70,7 @@ h6 {
 	letter-spacing: 0;
 }
 
-/* Para pantallas tablet y desktop */
+/* Tablet & Desktop only */
 @media (min-width: 550px) {
 	h1 {
 		font-size: 5.5rem;
@@ -223,11 +222,9 @@ header {
 		-webkit-transform: translate(0, -10px) rotate(45deg);
 		opacity: 0;
 	}
-
 	50% {
 		opacity: 1;
 	}
-
 	100% {
 		-webkit-transform: translate(0, 10px) rotate(45deg);
 		opacity: 0;
@@ -239,11 +236,9 @@ header {
 		-moz-transform: translate(0, -10px) rotate(45deg);
 		opacity: 0;
 	}
-
 	50% {
 		opacity: 1;
 	}
-
 	100% {
 		-moz-transform: translate(0, 10px) rotate(45deg);
 		opacity: 0;
@@ -255,11 +250,9 @@ header {
 		transform: translate(0, -10px) rotate(45deg);
 		opacity: 0;
 	}
-
 	50% {
 		opacity: 1;
 	}
-
 	100% {
 		transform: translate(0, 10px) rotate(45deg);
 		opacity: 0;
@@ -267,13 +260,49 @@ header {
 }
 
 /* About Me */
-
 #about {
-	padding: 100px 0 50px 0;
+	padding: 80px 0 50px 0;
 }
 
-/* Team Section
-********************************************************************* */
+#about p {
+	margin: 1rem;
+}
+
+#about h3 {
+	font-family: 'Nickandley', sans-serif;
+	font-size: 4rem;
+}
+
+.picture-animation {
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  margin: 40px;  
+  max-width: 310px;
+  width: 100%;
+  background-color: #000000;
+  color: #ffffff;
+  text-align: left;
+  font-size: 16px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+}
+.picture-animation * {
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.picture-animation img {
+  max-width: 100%;
+  vertical-align: top;
+}
+.picture-animation:hover img,
+.picture-animation.hover img {
+  -webkit-transform: scale(1.3) rotate(5deg);
+  transform: scale(1.3) rotate(5deg);
+}
+
+/* Team Section */
 #team {
 	padding: 50px 0 100px 0;
 }
@@ -282,8 +311,15 @@ header {
 	font-size: 26px;
 }
 
-/* Skills Section
-********************************************************************* */
+/* Skills Section */
+.icon-container {
+  display: inline-block;
+}
+
+.icon-container img {
+	width: 70px;
+	padding-right: 10px;
+}
 #skills {
 	padding: 100px 0 100px 0;
 	background-color: #F5F5F5;
@@ -573,8 +609,9 @@ form {
 ********************************************************************* */
 
 .icon {
-	padding-right: 10px;
-	color: #e55d87;
+	font-size: 35px;
+	padding: 0 12px;
+	color: #9880ef;
 }
 
 .block {
