--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -1,7 +1,7 @@
 /* Banner */
 
 .banner {
-	background-image: url('../img/2224569-wide-02.png');
+	background-image: url('../img/1085897.jpg');
   background-color: #000;
   background-position: center;
   background-size: cover;
