--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -141,36 +141,28 @@ header {
 	-ms-flex-item-align: center;
 	align-self: center;
 	padding: 2rem;
-	text-align: center;
-}
-
-.title .smallsep {
-	background: #fff;
-	height: 2px;
-	width: 70px;
-	margin: auto;
-	margin-top: 30px;
-	margin-bottom: 30px;
-}
-
-.title h1 {
-	font-family: 'Nickandley', sans-serif;
-	font-size: 100px;
-	font-weight: 300;
-	line-height: 0.85;
-	margin-bottom: 28px;
-	margin: 0;
-	padding: 0;
+	text-align: initial;
 	color: #FFFFFF;
-}
-
-.title h2 {
-	color: #FFFFFF;
-	font-size: 20px;
+	font-size: 40px;
 	font-weight: 400;
 	text-transform: uppercase;
 	letter-spacing: 5px;
 	margin-top: 30px;
+}
+
+.title h1 {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 40px;
+}
+
+.title h2 {
+	font-size: 30px;
+}
+
+.title span {
+	background-color: #b36e84;
+	font-weight: 700;
+	padding: 0 5px 0 3px;
 }
 
 .title p {
