--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,7 +17,8 @@ body {
 	margin: 0;
 	font-size: 1.5em;
 	line-height: 1.6;
-	color: #222;
+	color: #f5f5f5;
+	background-color: #2a2e4c;
 	font-family: 'Montserrat', sans-serif;
 }
 
@@ -34,10 +35,9 @@ h6 {
 }
 
 h1 {
-	font-family: 'Nickandley', sans-serif;
+	font-family: 'Patrick Hand', cursive;
 	font-size: 4.0rem;
 	line-height: 1.2;
-	letter-spacing: -.1rem;
 }
 
 h2 {
@@ -103,11 +103,13 @@ p {
 
 /* Links */
 a {
-	color: #9880ef;
+	color: #fff;
+	text-decoration: none;
 }
 
 a:hover {
-	color: #5c3dd3;
+	color: #e7e7e9;
+	text-decoration: none;
 }
 
 /* Header */
@@ -140,7 +142,7 @@ header {
 	-webkit-align-self: center;
 	-ms-flex-item-align: center;
 	align-self: center;
-	padding: 2rem;
+	padding: 5rem;
 	text-align: initial;
 	color: #FFFFFF;
 	font-size: 40px;
@@ -153,6 +155,7 @@ header {
 .title h1 {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 40px;
+	letter-spacing: -.1rem;
 }
 
 .title h2 {
@@ -172,10 +175,34 @@ header {
 }
 
 @media only screen and (max-width: 500px) {
+	.title {
+		padding: 2rem;
+	}
+
 	.title h1 {
-		font-size: 65px;
+		font-size: 28px;
+	}
+
+	.title h2 {
+		font-size: 23px;
 	}
 }
+
+
+@media only screen and (min-width: 1300px) {
+	.title {
+		padding: 8rem;
+	}
+
+	.title h1 {
+		font-size: 50px;
+	}
+
+	.title h2 {
+		font-size: 40px;
+	}
+}
+
 
 .scroll-down {
 	position: absolute;
@@ -187,8 +214,8 @@ header {
 	z-index: 100;
 	text-decoration: none;
 	text-shadow: 0;
-	width: 13px;
-	height: 13px;
+	width: 20px;
+	height: 20px;
 	border-bottom: 2px solid #fff;
 	border-right: 2px solid #fff;
 	z-index: 9;
@@ -203,8 +230,8 @@ header {
 @media only screen and (min-width: 766px) {
 	.scroll-down {
 		bottom: 6vh;
-		width: 20px;
-		height: 20px;
+		width: 25px;
+		height: 25px;
 	}
 }
 
@@ -214,9 +241,11 @@ header {
 		-webkit-transform: translate(0, -10px) rotate(45deg);
 		opacity: 0;
 	}
+
 	50% {
 		opacity: 1;
 	}
+
 	100% {
 		-webkit-transform: translate(0, 10px) rotate(45deg);
 		opacity: 0;
@@ -228,9 +257,11 @@ header {
 		-moz-transform: translate(0, -10px) rotate(45deg);
 		opacity: 0;
 	}
+
 	50% {
 		opacity: 1;
 	}
+
 	100% {
 		-moz-transform: translate(0, 10px) rotate(45deg);
 		opacity: 0;
@@ -242,9 +273,11 @@ header {
 		transform: translate(0, -10px) rotate(45deg);
 		opacity: 0;
 	}
+
 	50% {
 		opacity: 1;
 	}
+
 	100% {
 		transform: translate(0, 10px) rotate(45deg);
 		opacity: 0;
@@ -256,42 +289,49 @@ header {
 	padding: 80px 0 50px 0;
 }
 
-#about p {
-	margin: 1rem;
-}
-
 #about h3 {
 	font-family: 'Nickandley', sans-serif;
 	font-size: 4rem;
 }
 
+#about span {
+	background-color: #b36e84;
+	font-weight: 700;
+	padding: 2px 3px;
+	color: #fff;
+	text-decoration: none;
+}
+
 .picture-animation {
-  position: relative;
-  display: inline-block;
-  overflow: hidden;
-  margin: 40px;  
-  max-width: 310px;
-  width: 100%;
-  background-color: #000000;
-  color: #ffffff;
-  text-align: left;
-  font-size: 16px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+	position: relative;
+	display: inline-block;
+	overflow: hidden;
+	margin: 40px;
+	max-width: 310px;
+	width: 100%;
+	background-color: #000000;
+	color: #ffffff;
+	text-align: left;
+	font-size: 16px;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 }
+
 .picture-animation * {
-  -webkit-transition: all 0.35s;
-  transition: all 0.35s;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+	-webkit-transition: all 0.35s;
+	transition: all 0.35s;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 }
+
 .picture-animation img {
-  max-width: 100%;
-  vertical-align: top;
+	max-width: 100%;
+	vertical-align: top;
 }
+
 .picture-animation:hover img,
 .picture-animation.hover img {
-  -webkit-transform: scale(1.3) rotate(5deg);
-  transform: scale(1.3) rotate(5deg);
+	-webkit-transform: scale(1.3) rotate(5deg);
+	transform: scale(1.3) rotate(5deg);
 }
 
 /* Team Section */
@@ -305,13 +345,14 @@ header {
 
 /* Skills Section */
 .icon-container {
-  display: inline-block;
+	display: inline-block;
 }
 
 .icon-container img {
 	width: 70px;
 	padding-right: 10px;
 }
+
 #skills {
 	padding: 100px 0 100px 0;
 	background-color: #F5F5F5;
@@ -607,12 +648,12 @@ form {
 }
 
 .block {
-	width: 100px;
+	width: 100%;
 	height: 2.5px;
 	background: #9880ef;
 	/* Old browsers */
-	background: -moz-linear-gradient(-45deg, #5c3dd3 0%, #e5a7f5 100%);
-	background: -webkit-linear-gradient(-45deg, #5c3dd3 0%, #e5a7f5 100%);
-	background: linear-gradient(135deg, #5c3dd3 0%, #e5a7f5 100%);
+	background: -moz-linear-gradient(-45deg, #e5a7f5 0%, #2a2e4c 100%);
+	background: -webkit-linear-gradient(-45deg, #e5a7f5 0%, #2a2e4c 100%);
+	background: linear-gradient(135deg, #e5a7f5 0%, #2a2e4c 100%);
 	margin-bottom: 50px;
 }
