--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -14,6 +14,8 @@
 .row-direction {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
 }
 
 .column,
@@ -75,7 +77,7 @@
 		width: 13.3333333333%;
 	}
 
-	.three.columns {
+	.three-columns {
 		width: 22%;
 	}
 
