--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -18,12 +18,12 @@
 }
 
 .sticky {
-	background-color: #020202;
+	background-color: #0c1326;
 	opacity: 1;
 	top: 0px;
-	-webkit-box-shadow: 0px 5px 5px 0px rgba(5,5,5,1);
-	-moz-box-shadow: 0px 5px 5px 0px rgba(5,5,5,1);
-	box-shadow: 0px 5px 5px 0px rgba(5,5,5,1);
+	-webkit-box-shadow: 0px 5px 5px 0px #0c1326;
+	-moz-box-shadow: 0px 5px 5px 0px #0c1326;
+	box-shadow: 0px 5px 5px 0px #0c1326;
 }
 
 nav {
