--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -80,10 +80,6 @@ h6 {
 		font-size: 4.2rem;
 	}
 
-	h3 {
-		font-size: 3.6rem;
-	}
-
 	h4 {
 		font-size: 3.0rem;
 	}
@@ -285,8 +281,8 @@ header {
 }
 
 /* About Me */
-#about {
-	padding: 80px 0 50px 0;
+#about, #projects {
+	padding-top: 100px;
 }
 
 #about h3 {
@@ -306,7 +302,6 @@ header {
 	position: relative;
 	display: inline-block;
 	overflow: hidden;
-	margin: 40px;
 	max-width: 310px;
 	width: 100%;
 	background-color: #000000;
@@ -333,6 +328,178 @@ header {
 	-webkit-transform: scale(1.3) rotate(5deg);
 	transform: scale(1.3) rotate(5deg);
 }
+
+/*Projects Section*/
+
+.project-card {
+	margin-bottom: 40px;
+}
+
+.snip1527 {
+  box-shadow: 0px 6px 16px -4px rgba(0,0,0,0.75);
+  color: #ffffff;
+  font-size: 16px;
+  overflow: hidden;
+  position: relative;
+  text-align: left;
+  width: 100%;
+  margin: 0;
+}
+
+.snip1527 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
+
+.snip1527 img {
+  max-width: 100%;
+  vertical-align: top;
+  position: relative;
+}
+
+.snip1527 figcaption {
+  padding: 15px 20px 15px;
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+  width: 100%;
+}
+
+.snip1527 figcaption:before {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #700877;
+  content: '';
+  background: -moz-linear-gradient(90deg, #2c128b 30%, #9c21c2 100%, #ff2759 100%);
+  background: -webkit-linear-gradient(90deg, #2c128b 30%, #9c21c2 100%, #ff2759 100%);
+  background: linear-gradient(90deg, #2c128b 30%, #9c21c2 100%, #ff2759 100%);
+  opacity: 0.8;
+  z-index: -1;
+}
+
+.snip1527 h4,
+.snip1527 p {
+  margin: 0;
+  padding: 0;
+}
+
+.snip1527 h4 {
+  display: inline-block;
+  letter-spacing: -0.4px;
+  margin-bottom: 5px;
+}
+
+.snip1527 p {
+  font-size: 0.8em;
+  line-height: 1.6em;
+  margin-bottom: 0px;
+}
+
+.snip1527:hover img,
+.snip1527.hover img {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.snip1527 a {
+  background-color: #700877;
+  margin-top: 5px;
+}
+
+.snip1527 a:hover,
+.snip1527 a:active {
+  background-color: #8e0c97 !important;
+}
+
+/* New card */
+figure.snip1458 {
+  font-family: 'Patrick Hand', cursive;
+  position: relative;
+  overflow: hidden;
+  margin: 10px;
+  min-width: 230px;
+  max-width: 400px;
+  width: 100%;
+  color: #ffffff;
+  text-align: left;
+  font-size: 16px;
+}
+figure.snip1458 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+figure.snip1458 img {
+  max-width: 100%;
+  vertical-align: top;
+}
+figure.snip1458 figcaption {
+  background-color: #b36e84;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+figure.snip1458 h3 {
+  text-align: center;
+  font-size: 2em;
+  padding: 10px;
+  margin: 0;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+figure.snip1458:before {
+  background: #b36e84b5;
+  content: "";
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  top: 0;
+  position: absolute;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+figure.snip1458 span {
+	font-family: 'Montserrat', sans-serif;
+  position: absolute;
+	width: 80%;
+  font-size: 1.2em;
+  left: 50%;
+  top: 40%;
+  -webkit-transform: translate(-50%, -50px);
+  transform: translate(-50%, -50px);
+  opacity: 0;
+	text-align: center;
+}
+
+figure.snip1458 a {
+	background-color: #fff;
+	color: #b36e84;
+	margin-top: 5px;
+  padding: 3px 5px;
+	
+}
+figure.snip1458:hover:before,
+figure.snip1458.hover:before {
+  left: 0;
+  right: 0;
+}
+figure.snip1458:hover span,
+figure.snip1458.hover span {
+  opacity: 1;
+}
+figure.snip1458:hover figcaption,
+figure.snip1458.hover figcaption {
+  background-color: #ffffff;
+  color: #b36e84b5;
+}
+
 
 /* Team Section */
 #team {
